--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mcp-framework",
-  "version": "0.2.11",
+  "name": "@middesk/mcp-framework",
+  "version": "0.2.16",
   "description": "Framework for building Model Context Protocol (MCP) servers in Typescript",
   "type": "module",
   "author": "Alex Andru <alex@andru.codes>",
